image dragging and context menu disabled

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </script>
 
 </head>
-<body class="md">
+<body class="md" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     
      <!---------- nav section ---------->
     <header class="border-b-2 py-[2px] sticky bg-white top-0 xl:static z-20">
